Revert to original z-indexing to fix menu's not working

--- a/jujugui/static/gui/src/app/components/panel/_panel.scss
+++ b/jujugui/static/gui/src/app/components/panel/_panel.scss
@@ -69,7 +69,7 @@
   &.isv-profile,
   &.user-profile {
     @extend %scroll-children;
-    z-index: index($z-indexed-elements, header-banner-search);
+    z-index: index($z-indexed-elements, top-page);
     top: $navbar-height;
     bottom: 0;
     right: 0;
